// file: pkg/organization/proto/requests/list_teams_request.proto

edition = "2023";

package gcommon.v1.organization;

import "common/proto/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/organization/proto";

message ListTeamsRequest {
  // Request metadata for tracing and context
  gcommon.v1.common.RequestMetadata metadata = 1;

  // Organization identifier
  string organization_id = 2;

  // Optional department identifier to scope teams
  string department_id = 3;

  // Maximum number of teams to return
  int32 page_size = 4;

  // Pagination token from previous response
  string page_token = 5;

  // Optional filter expression
  string filter = 6;
}
